// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Hero should be defined 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  width: 100%;
  margin: 0 auto;
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: transparent;
  color: white;
  min-height: 7.5rem;
  text-align: center;
}

<section
  className="c0 anchor-hero"
/>
`;

exports[`Component: Hero should render with custom content 1`] = `
.c2 {
  box-sizing: border-box;
  margin: 0;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 16px;
  line-height: 1.5rem;
  font-weight: normal;
  text-align: inherit;
  color: inherit;
}

.c2 small {
  font-size: 87.5%;
}

.c3 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  margin: 0;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: white;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
}

.c3 + .anchor-button {
  margin-left: 1rem;
}

.c3:hover,
.c3:focus,
.c3:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c3:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c0 {
  box-sizing: border-box;
  position: relative;
  width: 100%;
  margin: 0 auto;
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: transparent;
  color: white;
  min-height: 7.5rem;
  text-align: center;
}

.c1 {
  text-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.09);
  position: relative;
}

<section
  className="c0 anchor-hero"
>
  <h1
    className="c1 anchor-hero-title"
    scale={32}
  >
    Good Ole Title
  </h1>
  <span
    className="c2 anchor-typography"
  >
    Some Typography text
  </span>
  <button
    className="c3 anchor-button"
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    CTA
  </button>
</section>
`;

exports[`Component: Hero should render with title 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  width: 100%;
  margin: 0 auto;
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: transparent;
  color: white;
  min-height: 7.5rem;
  text-align: center;
}

.c1 {
  text-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.09);
  position: relative;
}

<section
  className="c0 anchor-hero"
>
  <h1
    className="c1 anchor-hero-title"
    scale={32}
  >
    Hero Title
  </h1>
</section>
`;

exports[`Component: Hero should render with title and subtitle 1`] = `
.c2 {
  box-sizing: border-box;
  margin: 0;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: normal;
  text-align: inherit;
  color: inherit;
  font-weight: 600;
}

.c2 small {
  font-size: 87.5%;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  width: 100%;
  margin: 0 auto;
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: transparent;
  color: white;
  min-height: 7.5rem;
  text-align: center;
}

.c1 {
  text-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.09);
  position: relative;
}

.c3 {
  text-shadow: 0 0.125rem 0.125rem rgba(0,0,0,0.04);
  position: relative;
  display: block;
}

<section
  className="c0 anchor-hero"
>
  <h1
    className="c1 anchor-hero-title"
    scale={32}
  >
    Hero Title
  </h1>
  <span
    className="c2 anchor-typography c3 anchor-hero-subtitle"
    scale={18}
  >
    Hero Subtitle
  </span>
</section>
`;
